Update README.md file. Add image if. Remove superfluous test pages. Add sample draft blog posts to test blog post and translation. Update comments from double quotes to single quotes. Remove full width from ContentBanner because of overflow-x issues

--- a/src/components/ContentBanner.modules.scss
+++ b/src/components/ContentBanner.modules.scss
@@ -5,12 +5,6 @@
     var(--palette-cyan) 0%,
     var(--palette-blue) 90%
   );
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
 }
 
 .contentBannerContainer {
